// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-uh73o1"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-12ynuxc"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginBottom 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-khj2j9"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginTop 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-11el21j"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;
